clean Bethanien ContentList template

--- a/theme/bethanien/templates/blocks/contentList.html
+++ b/theme/bethanien/templates/blocks/contentList.html
@@ -1,114 +1,3 @@
 <div ng-controller="ContentListController as contentListCtrl">
-    <select ng-if="contentListCtrl.canAddToList()&&contentListCtrl.queryType=='manual'"
-            ng-options="ct.id as ct.type for ct in contentListCtrl.creatableContentTypes"
-            ng-model="contentListCtrl.selectedManualType"></select>
-    <button ng-if="contentListCtrl.canAddToList()"
-            title="Add content"
-            class="btn btn-default"
-            ng-click="contentListCtrl.launchContribute()">
-        <span class="glyphicon glyphicon-plus"></span>
-    </button>
-    <button ng-if="!contentListCtrl.canAddToList()&&contentListCtrl.isFOContributeMode&&contentListCtrl.editorPageUrl"
-            title="Add content"
-            class="btn btn-default"
-            ng-click="contentListCtrl.launchFOContribute()">
-        <span class="glyphicon glyphicon-plus"></span> {{rubedo.translate("Blocks.Contrib.Label.NewContent", "New Content")}}
-    </button>
-    <div class="row contentList" ng-switch="blockConfig.columns">
-       <!--POUR 1 COLONNE-->
-        <div ng-style="contentListCtrl.blockStyle" ng-switch-when="1" class="padding-">
-            <!--<div id="infiniteScrollCtrl">-->
-            <div  ng-repeat="columnContents in contentListCtrl.contentList" ng-init="columnIndex = $index" >
-                <div ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in columnContents" class="equal-height-cols">
-                   <a ng-if="!fieldEditMode"  ng-href="{{!fieldEditMode? content.contentLinkUrl : ''}}">
-                    <div class="col-sm-8 col-xs-12">
-                    <img class="img-responsive no-margin" ng-if="content.fields.image"
-                                                                     ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'700px',height:'350px',mode:'crop'}) }}"
-                                                                     alt="{{ content.fields.text }}"/>                                                   
-                    </div>
-                    <div class="col-sm-4 col-xs-12">
-                        <h3>
-                            {{content.fields.text}}
-
-                            <rubedo-field ng-if="fieldEditMode" field="{{content.type.title}}"></rubedo-field>
-                        </h3>
-                       <p  ng-if="!contentListCtrl.titleOnly">
-                            <rubedo-field field="{{content.type.summary}}"></rubedo-field>
-                       </p>
-                    </div>                    
-                   </a>
-
-                </div>
-            </div>
-        </div>
-
-
-        <!--AUTRES-->
-        <div ng-style="contentListCtrl.blockStyle" ng-switch-default  ng-class="{'container' : blockConfig.container}">
-                <div class="col-sm-6 col-xs-12" ng-class="contentListCtrl.columns" ng-controller="ContentListDetailController as contentListDetailCtrl" ng-repeat="content in contentListCtrl.contents" ng-switch="content.typeId">                
-                    <!---VIDEOS-->
-                    <div ng-switch-when="56094a2245205e0e2541ea77" class="videoList">
-                        <div class="video">
-                            <iframe width="444" height="250" src="{{contentListCtrl.getVideoId(content.fields.video.url)}}" frameborder="0" ></iframe>
-                        </div>
-                        <div class="video" data-toggle="modal" data-target="#myModal{{content.id}}"></div>
-                        <div class="video-txt">
-                            <h3>{{content.fields.text}}</h3>
-                            <p>{{content.fields.summary}}</p>
-                            <p><a ng-href="{{ content.contentLinkUrl }}">{{content.fields.subTitle}}</a></p>
-                        </div>
-                        <div class="modal fade" id="myModal{{content.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                        <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                  <h4 class="modal-title" id="myModalLabel">{{content.fields.text}}</h4>
-                                </div>
-                                <div class="modal-body">
-                                    <iframe width="620" height="380" src="{{contentListCtrl.getVideoId(content.fields.video.url)}}" frameborder="0" allowfullscreen></iframe>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>
-                          </div>
-                        </div>
-                      </div>
-                        
-                   </div>
-                    <!--LINK TO PAGE-->
-                    <div ng-switch-when="56ab6e94c445ecde138b4e2b" class="pageList">
-                        <a ng-href="{{ content.contentLinkUrl }}">
-                            <div>
-                                <img  ng-if="content.fields.image"
-                                                    ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'600px',height:'300px',mode:'crop'}) }}"
-                                                    alt="{{ content.fields.text }}"/>
-                            </div>
-                            <div>
-                                <h3>{{content.fields.text}}</h3>
-                                <p>{{content.fields.summary}}</p>
-                            <!-- <p><a ng-href="{{ content.contentLinkUrl }}">{{content.fields.subTitle}}</a></p>-->
-                            </div>
-                        </a>
-                    </div>
-                    <!--DEFAUT-->
-                    <div ng-switch-default class="album">
-                        <a ng-href="{{ content.contentLinkUrl }}">
-                            <img  ng-if="content.fields.image" style="width: 100%"
-                                                 ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'400px',height:'200px',mode:'crop'}) }}"
-                                                 alt="{{ content.fields.text }}"/>
-                            <div>
-                                <h4>{{content.fields.text}}</h4>
-                                <!--<p>{{content.fields.summary}}</p>-->
-                            </div>
-                            
-                        </a>                  
-                    </div>
-                </div>
-                <div class="col-sm-12 " ng-if="blockConfig.singlePage">
-                    <a class="pull-right txt-grey" rubedo-page-link="{{blockConfig.singlePage}}"><i class="glyphicon glyphicon-th"></i> {{rubedo.translate('Block.ContentList.Label.ReadMore','read more')}}</a>
-                </div>
-        </div>
-    </div>
-    
-
+    <div ng-include="contentListCtrl.templateUrl"></div>
 </div>
