--- a/theme/bethanien/templates/blocks/contentList.html
+++ b/theme/bethanien/templates/blocks/contentList.html
@@ -1,3 +1,3 @@
-<div ng-controller="ContentListController as contentListCtrl">
+<div ng-controller="ContentListController as contentListCtrl" class="beth_contentlist">
     <div ng-include="contentListCtrl.templateUrl"></div>
 </div>
