clean Bethanien ContentList template

--- a/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
+++ b/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
@@ -4,8 +4,8 @@
         ng-repeat="content in contentListCtrl.contents track by $index">
         
         <img class="img-responsive no-margin" ng-if="content.fields.image"
-                ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'300px',height:'200px',mode:'crop'}) }}"
-                onerror="this.src='https://www.haus-bethanien.ch/dam?media-id=57175694c445ecda008c4b31&width=400px&height=300px&mode=crop'"
+                ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'250px',height:'150px',mode:'crop'}) }}"
+                onerror="this.src='https://www.haus-bethanien.ch/dam?media-id=57175694c445ecda008c4b31&width=250px&height=150px&mode=crop'"
                 alt="{{ content.fields.text }}"/> 
 
         <h3>
@@ -20,3 +20,19 @@
     </div>
 
 </div>
+
+<style>
+.program_row_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.program_row_container > .container {
+    display: flex;
+    padding: 2rem 0;
+    margin: 0;
+    border-top: 1px solid #006ba8;
+    width: 70vw;
+}
+</style>
