--- a/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
+++ b/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
@@ -13,7 +13,7 @@
             <rubedo-field ng-if="fieldEditMode" field="{{content.type.title}}"></rubedo-field>
         </h3>
 
-        <p ng-if="!contentListCtrl.titleOnly">
+        <p>{{contentListCtrl.titleOnly}}
             <rubedo-field field="{{content.type.summary}}"></rubedo-field>
         </p>      
 
@@ -33,7 +33,13 @@
     padding: 2rem 0;
     margin: 0;
     border-top: 1px solid hsla(208, 56%, 30%, 1);
-    width: 60vw;
+    width: 100vw;
+}
+
+@media screen and (min-width: 700px) {
+	.program_col_container {
+        width: 60vw;
+    }
 }
 
 .program_col_container h3 {
