clean Bethanien ContentList template

--- a/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
+++ b/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
@@ -14,7 +14,7 @@
         </h3>
 
         <p ng-if="!contentListCtrl.titleOnly">
-            {{content.type.summary}}
+            {{content.fields.summary}}
             <rubedo-field ng-if="fieldEditMode" field="{{content.type.summary}}"></rubedo-field>
         </p>      
 
