--- a/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
+++ b/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
@@ -3,12 +3,12 @@
     <div class="program_col_container"
         ng-repeat="content in contentListCtrl.contents track by $index">
         
-        <img class="img-responsive no-margin" ng-if="content.fields.image"
+        <img class="img-responsive no-margin program" ng-if="content.fields.image"
                 ng-src="{{rubedo.imageUrl.getUrlByMediaId(content.fields.image,{width:'200px',height:'150px',mode:'crop'}) }}"
                 onerror="this.src='https://www.haus-bethanien.ch/dam?media-id=57175694c445ecda008c4b31&width=200px&height=150px&mode=crop'"
                 alt="{{ content.fields.text }}"/> 
 
-        <div class="programme_texte">
+        <div class="program_text">
             <h3>
                 <a ng-if="!fieldEditMode"  ng-href="{{ !fieldEditMode ? content.contentLinkUrl : ''}}">{{content.fields.text}}</a>
                 <rubedo-field ng-if="fieldEditMode" field="{{content.type.title}}"></rubedo-field>
@@ -17,9 +17,58 @@
             <p ng-if="!contentListCtrl.titleOnly">
                 {{content.fields.summary}}
                 <rubedo-field ng-if="fieldEditMode" field="{{content.type.summary}}"></rubedo-field>
-            </p>   
+            </p> 
+            
+            <div class="program_dates">{{content.fields.dateDebut}}</div>
         </div>   
 
     </div>
 
 </div>
+
+<style>
+img.program {
+    border-radius: 7px;
+}
+
+.program_text {
+    margin: 14px;
+}
+
+.program_text h3 {
+    margin: 0 0 1rem 0;
+}
+
+.program_row_container {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	margin: 5vw 1vw;
+}
+
+.program_col_container {
+	display: flex;
+    padding: 0;
+    margin: 0 3rem 3rem;
+    border-radius: 7px;
+    width: 100vw;
+    background: hsla(0, 0%, 96%, 1);
+    box-shadow: hsla(0, 0%, 85%, 1) 1px 3px;
+}
+
+@media screen and (min-width: 1200px) {
+	.program_col_container {
+		width: 44vw;
+	}
+}
+
+.program_col_container a {
+	color: hsla(208, 56%, 41%, 1);
+}
+.program_col_container a:hover {
+	text-decoration: none;
+	color: hsla(208, 56%, 30%, 1);
+}
+</style>
