clean Bethanien ContentList template

--- a/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
+++ b/theme/bethanien/templates/blocks/contentList/ProgramTemplate.html
@@ -19,7 +19,7 @@
                 <rubedo-field ng-if="fieldEditMode" field="{{content.type.summary}}"></rubedo-field>
             </p> 
             
-            <div class="program_dates">{{moment.unix(content.fields.dateDebut).format('YYYY')}}</div>
+            <div class="program_dates">{{content.fields.dateDebutPretty}}</div>
         </div>   
 
     </div>
