added new neuf9 directive

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -93,7 +93,7 @@
 .nomargin{margin:0}
 .nopadding{padding:0}
 
-.bandeau{width:100vw;margin:3rem 0;}
+.bandeau{width:100vw;margin:16rem 0 3rem;}
 
 ////////////////////////////////////////////////
     /////// GLOBAL ////////////////
@@ -324,6 +324,14 @@ p.client_img_container {
 
 ////////////////////////////////////////////////
 /////// CONTENTLIST Contact ////////////////////
+////////////////////////////////////////////////
+
+.clients_row img {
+    margin: 5rem auto;
+}
+
+////////////////////////////////////////////////
+/////// CONTENTLIST Contact (les neuf) /////////
 ////////////////////////////////////////////////
 
 .contact_container {
