added new neuf9 directive

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -307,6 +307,14 @@ img.expertise_icon {
     }
 }
 
+// spécial : le 9 dans un rond qui apparaît au milieu de "NEUF"
+img.media9E {
+    height: 27px;
+    position: relative;
+    top: -4px;
+    left: -10px;
+}
+
 
 ////////////////////////////////////////////////
 /////////// TEXTE RICHE CLIENTS  ///////////////
