--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -88,7 +88,7 @@
 
 .mt-7{margin-top:7rem} .mt-8{margin-top:8rem} .mt-9{margin-top:9rem}
 .ml-7{margin-left:7rem} .ml-8{margin-left:7rem} .ml-9{margin-left:7rem}
-.fs-2{font-size:2rem;line-height:2rem;} .fs-3{font-size:3rem;line-height:3rem;} .fs-4{font-size:4rem;line-height:4rem;}
+.fs-2{font-size:2rem;line-height:2rem;} .fs-3{font-size:3rem;line-height:3.6rem;} .fs-4{font-size:4rem;line-height:4rem;}
 
 .nomargin{margin:0}
 .nopadding{padding:0}
@@ -309,12 +309,13 @@ img.expertise_icon {
 
 // spécial : le 9 dans un rond qui apparaît au milieu de "NEUF"
 img.media9E {
-    height: 27px;
+    height: 21px;
     position: relative;
     top: -4px;
     left: -10px;
 }
-
+@media screen and (min-width: @min_xs) and (max-width:@min_sm){img.media9E{height: 28px}}
+@media screen and (min-width: @min_sm){img.media9E{height: 42px}}
 
 ////////////////////////////////////////////////
 /////////// TEXTE RICHE CLIENTS  ///////////////
