added new neuf9 directive

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -315,7 +315,7 @@ img.media9E {
     left: -10px;
 }
 @media screen and (min-width: @min_xs) and (max-width:@min_sm){img.media9E{height: 28px}}
-@media screen and (min-width: @min_sm){img.media9E{height: 42px}}
+@media screen and (min-width: @min_sm){img.media9E{height: 42px;top: -6px;}}
 
 ////////////////////////////////////////////////
 /////////// TEXTE RICHE CLIENTS  ///////////////
