--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -159,6 +159,13 @@ html, body{
     }
 }
 
+.btn-primary {
+    color: #fff;
+    background-color: transparent;
+    font-family: OswaldLight;
+    letter-spacing: 1px;
+}
+
 /*FIXES*/
 .rubedo-block-contentContribution{min-height:0 !important}
 
