--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -164,6 +164,14 @@ html, body{
     background-color: transparent;
     font-family: OswaldLight;
     letter-spacing: 1px;
+    border: none;
+    transition: all 0.3s;
+}
+
+.btn-primary:hover {
+    background: white;
+    color: black;
+    transition: all 0.5s;
 }
 
 /*FIXES*/
