--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -430,6 +430,10 @@ h2.img_title > div:nth-child(2) {
     cursor: pointer;
 }
 
+.img-responsive {
+    margin: auto;
+}
+
 @media screen and (min-width: @min_xs) {
     .image_container {
         height: 300px;
