--- a/theme/9media/templates/blocks/navigation.html
+++ b/theme/9media/templates/blocks/navigation.html
@@ -23,9 +23,9 @@
             <li class="social_link hidden-xs" >
                 <a rubedo-page-link="5a630da239658886137fcea7"><i class="fa fa-envelope"></i></a>
             </li>
-            <li class="social_link hidden-xs hidden-sm" target="_blank">
+            <!-- <li class="social_link hidden-xs hidden-sm" target="_blank">
                 <a href="https://twitter.com/@9media"><i class="fa fa-twitter"></i></a>
-            </li>
+            </li> -->
             <li class="social_link hidden-xs hidden-sm" target="_blank">
                 <a href="https://facebook.com/9media"><i class="fa fa-facebook"></i></a>
             </li>
