--- a/theme/bethanien/templates/blocks/navigation.html
+++ b/theme/bethanien/templates/blocks/navigation.html
@@ -2,6 +2,7 @@
     ng-controller="MenuController as menuCtrl"  scroll-position="scroll" 
     ng-class="{'transparent':(rubedo.current.page.id==blockConfig.rootPage && scroll<500)}"
     ng-init="
+        menuCtrl.getUrlById('596489e0396588da41cd2a56');
         lg = rubedo.current.page.locale;
         lang = {
             de: {
@@ -30,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li ng-if="blockConfig.displayRootPage"><a ng-if="blockConfig.displayRootPage" ng-href="{{menuCtrl.menu.url}}">{{menuCtrl.menu.text}}</a></li>
-                        <li><a ng-click="menuCtrl.getUrlById('596489e0396588da41cd2a56')" href>Restaurant</a></li>
+                        <li><a ng-href="menuCtrl.urls['596489e0396588da41cd2a56']">Restaurant</a></li>
                         <li ng-repeat="page in menuCtrl.menu.pages track by $index"
                             ng-class="{active:menuCtrl.currentRouteline.indexOf(page.url+'/') > -1 ||  menuCtrl.currentRouteline.indexOf(page.url,menuCtrl.currentRouteline.length-page.url.length) > -1, dropdown:page.pages&&blockConfig.menuLevel>1}">
                             <a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}"> {{page.text}}</a>
