--- a/theme/bethanien/templates/blocks/navigation.html
+++ b/theme/bethanien/templates/blocks/navigation.html
@@ -2,7 +2,7 @@
     ng-controller="MenuController as menuCtrl"  scroll-position="scroll" 
     ng-class="{'transparent':(rubedo.current.page.id==blockConfig.rootPage && scroll<500)}"
     ng-init="
-        menuCtrl.getUrlById('596489e0396588da41cd2a56'); /* https://www.haus-bethanien.ch/fr/accueil/locaux/restaurant */
+        menuCtrl.getUrlById('596489e0396588da41cd2a56');
         lg = rubedo.current.page.locale;
         lang = {
             de: {
