9media auth block css

--- a/theme/9media/css/9media.less
+++ b/theme/9media/css/9media.less
@@ -524,3 +524,9 @@ ul.liens_menu a {
     color: white;
     padding: 3rem 3rem;
 }
+
+.footer div[ng-controller*="Authentication"] {
+    text-align: center;
+    position: relative;
+    top: 28px;
+}
