add cross to put contentoffline

--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -120,7 +120,7 @@
         <!--DEFAUT-->
                     <div ng-switch-default>
                         <a  ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}" target="{{content.isExternal ? '_blank' : '_self'}}">
-                            <div class="media-body contentbox" >
+                            <div class="media-body" ng-class="{contentbox: rubedo.current.user && rubedo.current.user.rights.canEdit}" >
                                 <!-- Icône "X" pour mettre offline le contenu -->
                                 <i ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit" class="fa fa-times put_offline"></i>
                                 
