add cross to put contentoffline

--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -208,6 +208,7 @@
     }
 
     i.put_offline {
+        visibility: hidden;
         display: inline;
         position: relative;
         top: 30px;
