--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -122,9 +122,9 @@
                         <a  ng-if="!fieldEditMode" ng-href="{{ content.contentLinkUrl }}" target="{{content.isExternal ? '_blank' : '_self'}}">
                             <div class="media-body" ng-class="{contentbox: rubedo.current.user && rubedo.current.user.rights.canEdit}" >
                                 <!-- Icône "X" pour mettre offline le contenu -->
-                                <i  ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit" 
+                                <div  ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit" 
                                     ng-click="contentListCtrl.putOffline($event, content); $event.stopPropagation();"
-                                    class="fa fa-times put_offline"></i>
+                                    class="fa fa-times put_offline">X</div>
                                 
                                 <h4 class="list-item-title capital"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span>
                                 </h4>
@@ -205,12 +205,12 @@
         margin-top: -22px;
     }
 
-    div.contentbox:hover i.put_offline {
+    div.contentbox:hover .put_offline {
         visibility: visible;
         transition: all 0.3s;
     }
 
-    i.put_offline {
+    .put_offline {
         visibility: hidden;
         display: inline;
         position: relative;
