--- a/theme/cte/templates/blocks/contentList.html
+++ b/theme/cte/templates/blocks/contentList.html
@@ -124,7 +124,7 @@
                                 <!-- Icône "X" pour mettre offline le contenu -->
                                 <div  ng-if="rubedo.current.user && rubedo.current.user.rights.canEdit" 
                                     ng-click="contentListCtrl.putOffline($event, content); $event.stopPropagation();"
-                                    class="fa fa-times put_offline">X</div>
+                                    class="fa fa-times put_offline"></div>
                                 
                                 <h4 class="list-item-title capital"><span>{{content.fields.text}} <span ng-if="contentListCtrl.isFOContributeMode">( {{rubedo.translate("Label." + content.status.toLowerCase())}} )</span></span>
                                 </h4>
