--- a/theme/cte/templates/blocks/inscription.html
+++ b/theme/cte/templates/blocks/inscription.html
@@ -97,7 +97,7 @@
                         </div>  
                    </div>
                    <!---CHOIX DU MODE DE PAIEMENT-->
-                   <div class="row border-bottom" ng-if="inscription.paiement_maintenant && inscription.paiement_maintenant !='rien' && inscription.moyens_paiement_multiples">
+                   <div class="row border-bottom" ng-if="inscription.paiement_maintenant && inscription.paiement_maintenant !='rien' && moyens_paiement_multiples">
                         <div class="col-xs-6">
                             <label class="label_style">{{rubedo.translate("Block.Inscription.Paf.ModePaiment")}}</label>
                         </div>
